--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,10 @@
-name: RainMan
+name: RainManNG
 main: me.abcric.bukkit.rainman.RainMan
-version: 1.0
-author: ABCRic
+version: 1.1
+api-version: 1.18
+authors: 
+   - ABCRic
+   - Velnias75
 commands:
    rainman:
       description: This is the global plugin command.
