--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,7 @@ version = '1.1-SNAPSHOT'
 repositories {
 	mavenLocal()
 
-	maven {
-		name = 'Spigot'
-		url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
-		
-		content {
-			includeGroup 'org.bukkit'
-			includeGroup 'org.spigotmc'
-    	}
-	}
-	
+	maven { url = uri('https://papermc.io/repo/repository/maven-public/') }
 	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
   	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
 	
@@ -34,7 +25,7 @@ java {
 
 dependencies {
 
-	compileOnly "org.spigotmc:spigot-api:${project.spigot_version}"
+	compileOnly "io.papermc.paper:paper-api:${project.paper_version}"
 
 	compileOnly("org.spigotmc:plugin-annotations:${project.plugins_annotation_version}") {
 		exclude module: "bukkit"
@@ -44,7 +35,7 @@ dependencies {
 	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	
-	testImplementation "org.spigotmc:spigot-api:${project.spigot_version}"
+	testImplementation "io.papermc.paper:paper-api:${project.paper_version}"
 	testImplementation "junit:junit:${project.junit_version}"
 }
 
