--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,13 @@ repositories {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(17))
+        languageVersion.set(JavaLanguageVersion.of(8))
     }
 }
 
 dependencies {
 
-	compileOnly "io.papermc.paper:paper-api:${project.paper_version}"
+	compileOnly "org.bukkit:bukkit:${project.bukkit_version}"
 
 	compileOnly("org.spigotmc:plugin-annotations:${project.plugins_annotation_version}") {
 		exclude module: "bukkit"
@@ -35,7 +35,7 @@ dependencies {
 	compileOnly "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	annotationProcessor "com.google.code.findbugs:annotations:${project.findbugs_version}"
 	
-	testImplementation "io.papermc.paper:paper-api:${project.paper_version}"
+	testImplementation "org.bukkit:bukkit:${project.bukkit_version}"
 	testImplementation "junit:junit:${project.junit_version}"
 }
 
