--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-paper_version=1.18.2-R0.1-SNAPSHOT
+bukkit_version=1.15.2-R0.1-SNAPSHOT
 plugins_annotation_version=1.2.3-SNAPSHOT
 findbugs_version=3.0.1
 junit_version=4.13.2
