--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'java'
 
 archivesBaseName = 'RainManNG'
-version = '1.1'
+version = '1.2-SNAPSHOT'
 
 repositories {
 	mavenLocal()
