--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ bukkit_version=1.15.2-R0.1-SNAPSHOT
 plugins_annotation_version=1.2.3-SNAPSHOT
 findbugs_version=3.0.1
 junit_version=4.13.2
+bstats_version=3.0.0
