--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@ plugins {
 apply plugin: 'java'
 
 archivesBaseName = 'RainManNG'
-version = '1.2-SNAPSHOT'
+version = '1.2'
 
 repositories {
 	mavenLocal()
 
 	maven { url = uri('https://papermc.io/repo/repository/maven-public/') }
 	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
-  	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
+	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
 	
 	mavenCentral()
 }
