--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'java'
 
 archivesBaseName = 'RainManNG'
-version = '1.2'
+version = '1.3-SNAPSHOT'
 
 repositories {
 	mavenLocal()
