--- a/common.gradle
+++ b/common.gradle
@@ -5,7 +5,7 @@ version = '1.4-SNAPSHOT'
 repositories {
 	mavenLocal()
 
-	maven { url = uri('https://papermc.io/repo/repository/maven-public/') }
+	maven { url = uri('https://repo.papermc.io/repository/maven-public/') }
 	maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
 	maven { url = 'https://oss.sonatype.org/content/repositories/central' }
 	
