--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 task submodulesUpdate(type:Exec) {
   description 'Updates (and inits) git submodules'
-  commandLine 'git', 'submodule', 'update', '--init', '--recursive'
+  commandLine 'git', 'submodule', 'update', '--init', '--recursive', '--remote'
   group 'Build Setup'
 }
 
