--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "spiget"]
 	path = spiget
-	url = git@github.com:velnias75/plugin-spiget.git
+	url = https://github.com/velnias75/plugin-spiget.git
