--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-bukkit_version=1.15.2-R0.1-SNAPSHOT
+spigot_version=1.13-R0.1-SNAPSHOT
 findbugs_version=3.0.1
 junit_version=4.13.2
 bstats_version=3.0.0
